# robocup_home

./: .gitignore  README.md
manipulable_objects/instance_recognition/: CMakeLists.txt  package.xml
manipulable_objects/instance_recognition/include/: instance_recognition.h
manipulable_objects/instance_recognition/src/: instance_recognition.cpp
manipulable_objects/instance_recognition_3d/: CMakeLists.txt  package.xml
manipulable_objects/instance_recognition_3d/include/: instance_recognition_3d.h  instance_training_3d.h  lrhome_3d.h
manipulable_objects/instance_recognition_3d/launch/: instance_recognition_3d.launch  instance_training_3d.launch
manipulable_objects/instance_recognition_3d/src/: instance_recognition_3d.cpp  instance_training_3d.cpp  lrhome_3d.cpp
manipulable_objects/manipulable_objects/: CMakeLists.txt  package.xml
manipulable_objects/object_detection/: CMakeLists.txt  package.xml
manipulable_objects/object_detection/include/: object_detection.h
manipulable_objects/object_detection/launch/: object_detection.launch
manipulable_objects/object_detection/src/: object_detection.cpp
manipulable_objects/object_prediction/: CMakeLists.txt  package.xml
manipulable_objects/object_prediction/include/: object_prediction.h
manipulable_objects/object_prediction/launch/: object_prediction.launch
manipulable_objects/object_prediction/src/: object_prediction.cpp
manipulable_objects/sensor_fusion/: CMakeLists.txt  package.xml
manipulable_objects/sensor_fusion/include/: sensor_fusion.h
manipulable_objects/sensor_fusion/launch/: sensor_fusion.launch
manipulable_objects/sensor_fusion/src/: sensor_fusion.cpp
manipulable_objects/shape_recognition/: CMakeLists.txt  package.xml
manipulable_objects/shape_recognition/include/: shape_recognition.h
manipulable_objects/shape_recognition/src/: shape_recognition.cpp
manipulable_objects/tracking/: CMakeLists.txt  package.xml
manipulable_objects/tracking/include/: tracking.h
manipulable_objects/tracking/src/: tracking.cpp
perception_databases/: CMakeLists.txt  package.xml
person/face_detection/: CMakeLists.txt  package.xml
person/face_detection/include/: face_detection.h  from2dto3d.h  mtcnn.h
person/face_detection/launch/: face_detection.launch  person_stack.launch
person/face_detection/src/: face_detection.cpp  from2dto3d.cpp  mtcnn.cpp  network.cpp
person/face_recognition/: CMakeLists.txt  package.xml
person/face_recognition/data/: database.csv
person/face_recognition/include/: Facenet.h  face_recognition.h
person/face_recognition/launch/: face_recognitino.launch
person/face_recognition/src/: Facenet.cpp  create_csv.py  face_recognition.cpp
person/gender_emotion_recognition/: CMakeLists.txt  package.xml
person/gender_emotion_recognition/include/: gender_emotion_recognition.h  model.h
person/gender_emotion_recognition/include/emotion_recognition/: emotion_recognition.h
person/gender_emotion_recognition/include/gender_classification/: gender_classification.h
person/gender_emotion_recognition/launch/: face_detection.launch  gender_emotion.launch
person/gender_emotion_recognition/src/: emotion_recognition.cpp  gender_classification.cpp  gender_emotion_recognition.cpp  model.cpp
person/gesture_recognition/: CMakeLists.txt  package.xml
person/gesture_recognition/include/: gesture_recognition.h  gesture_recognition_node.h
person/gesture_recognition/launch/: gesture_recognition.launch
person/gesture_recognition/src/: gesture_recognition.cpp  gesture_recognition_node.cpp
rhome_msgs/: CMakeLists.txt  package.xml
rhome_srvs/: CMakeLists.txt  package.xml
rhome_srvs/srv/: Getinformation.srv  Position3d.srv
robmosys_srvs/: CMakeLists.txt  package.xml
robmosys_srvs/srv/: objectinformation.srv
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/: .catkin  .rosinstall  setup.sh
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/include/turtle_vis/: DesiredPose.h  send_desired_poseRequest.h  send_desired_poseResponse.h
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/lib/pkgconfig/: turtle_vis.pc
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/lib/python2.7/dist-packages/turtle_vis/msg/: _DesiredPose.py
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/lib/python2.7/dist-packages/turtle_vis/srv/: _send_desired_pose.py
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/lib/turtle_vis/: turtle_control_node  turtle_set_position  turtle_vis_node
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/share/common-lisp/ros/turtle_vis/msg/: DesiredPose.lisp
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/share/common-lisp/ros/turtle_vis/srv/: send_desired_pose.lisp
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/share/gennodejs/ros/turtle_vis/msg/: DesiredPose.js
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/share/gennodejs/ros/turtle_vis/srv/: send_desired_pose.js
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/share/roseus/ros/turtle_vis/: manifest.l
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/share/roseus/ros/turtle_vis/msg/: DesiredPose.l
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/share/roseus/ros/turtle_vis/srv/: send_desired_pose.l
ros/workspace/roboCupHome_tutorial_GengyuanZhang/devel/share/turtle_vis/cmake/: turtle_vis-msg-extras.cmake  turtle_vis-msg-paths.cmake  turtle_visConfig.cmake
ros/workspace/roboCupHome_tutorial_GengyuanZhang/src/turtle_vis/: .README.md.swp  CMakeLists.txt  readme.txt
ros/workspace/roboCupHome_tutorial_GengyuanZhang/src/turtle_vis/include/turtle_vis/myClass/: TurtleClass.h
ros/workspace/roboCupHome_tutorial_GengyuanZhang/src/turtle_vis/launch/: TurtleVis.launch
ros/workspace/roboCupHome_tutorial_GengyuanZhang/src/turtle_vis/src/solutions/: turtle_control_node.cpp  turtle_set_position.cpp  turtle_vis_node.cpp
ros/workspace/roboCupHome_tutorial_GengyuanZhang/src/turtle_vis/src/solutions/myClass/: TurtleClass.cpp
ros/workspace/roboCupHome_tutorial_GengyuanZhang/src/turtle_vis/srv/: send_desired_pose.srv
