<?xml version="1.0"?>
<package>
  <name>rhome_srvs</name>
  <version>0.0.1</version>
  <description>The rhome_srvs package</description>

  <!-- team -->
    <maintainer email="luz.martinez@tum.de">
        Luz Martinez</maintainer>
    <author     email="luz.martinez@tum.de">
        Luz Martinez</author>

  <!-- specific developers -->
  <maintainer email="luz.martinez@tum.de">Luz Martinez</maintainer>
  <author>Luz Martinez</author>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend> 
  
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>openni2_launch</build_depend>
  <build_depend>rhome_msgs</build_depend>

  <run_depend>message_runtime</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rhome_msgs</run_depend>
  
  

  <export>
  </export>
</package>
