<?xml version="1.0"?>
<package>
  <name>manipulable_objects</name>
  <version>0.0.1</version>
  <description>The Manipulable Objects metapackage</description>

  <!-- team -->
    <maintainer email="luz.martinez@tum.de"> Luz Martinez </maintainer>

  <!-- specific developers -->
  <maintainer email="luz.martinez@tum.de">Luz Martinez</maintainer>
  <author>Luz Martinez</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
   <metapackage />
  </export>
</package>
