<?xml version="1.0"?>
<package>
  <name>shape_recognition</name>
  <version>0.0.1</version>
  <description>The shape_recognition package</description>

  <!-- team -->
    <maintainer email="luz.martinez@tum.de"> Luz Martinez </maintainer>

  <!-- specific developers -->
  <maintainer email="luz.martinez@tum.de">Luz Martinez</maintainer>
  <author>Luz Martinez</author>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>rhome_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>openni2_launch</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>object_pose_estimation</build_depend>


  <run_depend>rhome_srvs</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>object_pose_estimation</run_depend> 
  


  <export>
  </export>
</package>
